# ffms2-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp  video_reader.cpp  video_reader.hpp  wav_io.cpp  wav_io.hpp
cmake/: FindFFmpeg.cmake  fetch.cmake
ffms2/: CMakeLists.txt
ffms2/include/: ffms.h
ffms2/src/core/: indexing.cpp  videosource.cpp
